--- a/MNEPython/Afirstlook.ipynb
+++ b/MNEPython/Afirstlook.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -58,9 +58,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "👋 Hello! This is openneuro-py 2022.2.0. Great to see you! 🤗\n",
+      "\n",
+      "   👉 Please report problems 🤯 and bugs 🪲 at\n",
+      "      https://github.com/hoechenberger/openneuro-py/issues\n",
+      "\n",
+      "🌍 Preparing to download ds004346 …\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "83593cb0fb7b450ea32d1459db1d3ce9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "📁 Traversing directories for ds004346 : 0 entities [00:00, ? entities/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📥 Retrieving up to 349 files (5 concurrent downloads). \n",
+      "✅ Finished downloading ds004346.\n",
+      " \n",
+      "🧠 Please enjoy your brains.\n",
+      " \n"
+     ]
+    }
+   ],
    "source": [
     "dataset = 'ds004346'\n",
     "\n",
@@ -80,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,9 +144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ghafarit\\AppData\\Local\\Temp\\ipykernel_17560\\210554171.py:1: RuntimeWarning: The unit for channel(s) STI001, STI002, STI003, STI004, STI005, STI006, STI007, STI008, STI009, STI010, STI011, STI012, STI013, STI014, STI015, STI016, STI101, STI102 has changed from V to NA.\n",
+      "  data1 = read_raw_bids(bids_path=bids_path, verbose=False)\n"
+     ]
+    }
+   ],
    "source": [
     "data1 = read_raw_bids(bids_path=bids_path, verbose=False)"
    ]
@@ -121,9 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Raw | sub-01_ses-01_task-SpAtt_run-01_meg.fif, 343 x 1457000 (1457.0 s), ~737 kB, data not loaded>\n"
+     ]
+    }
+   ],
    "source": [
     "print(data1)"
    ]
@@ -139,9 +195,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Info | 21 non-empty values\n",
+      " acq_pars: ACQactiveGround 1 ACQch.BIO001.gain 2000 ACQch.BIO001.highpass ...\n",
+      " bads: []\n",
+      " ch_names: EOG001, EOG002, ECG003, IASX+, IASX-, IASY+, IASY-, IASZ+, ...\n",
+      " chs: 6 misc, 11 IAS, 102 Magnetometers, 204 Gradiometers, 18 Stimulus, 2 SYST\n",
+      " custom_ref_applied: False\n",
+      " description: Anonymized using a time shift to preserve age at acquisition\n",
+      " dev_head_t: MEG device -> head transform\n",
+      " dig: 403 items (3 Cardinal, 4 HPI, 396 Extra)\n",
+      " events: 1 item (list)\n",
+      " experimenter: mne_anonymize\n",
+      " file_id: 4 items (dict)\n",
+      " gantry_angle: 68.0\n",
+      " highpass: 0.1 Hz\n",
+      " hpi_results: 1 item (list)\n",
+      " line_freq: 50.0\n",
+      " lowpass: 330.0 Hz\n",
+      " meas_date: 2000-01-01 00:00:00 UTC\n",
+      " meas_id: 4 items (dict)\n",
+      " nchan: 343\n",
+      " proj_name: mne_anonymize\n",
+      " projs: generated with autossp-1.2.0: off, generated with autossp-1.2.0: ...\n",
+      " sfreq: 1000.0 Hz\n",
+      " subject_info: 4 items (dict)\n",
+      ">\n"
+     ]
+    }
+   ],
    "source": [
     "print(data1.info)"
    ]
@@ -162,12 +250,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOTE: plot_psd() is a legacy function. New code should use .compute_psd().plot().\n",
+      "Effective window size : 0.256 (s)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ghafarit\\Anaconda3\\envs\\flux\\lib\\site-packages\\mne\\viz\\utils.py:137: UserWarning: Matplotlib is currently using module://matplotlib_inline.backend_inline, which is a non-GUI backend, so cannot show the figure.\n",
+      "  (fig or plt).show(**kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
-    "data1.plot_psd(fmax=60);"
+    "data1.plot_psd(fmax=60).show()"
    ]
   },
   {
@@ -184,14 +289,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Channels marked as bad:\n",
+      "none\n",
+      "Channels marked as bad:\n",
+      "none\n",
+      "Channels marked as bad:\n",
+      "none\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
-    "data1.plot(duration=10,title='Raw');"
+    "data1.plot(duration=10,title='Raw').show()"
    ]
   },
   {
@@ -203,12 +321,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for Loading-Thread to finish... (max. 10 sec)\n",
+      "Channels marked as bad:\n",
+      "none\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib qt\n",
-    "data1.plot(duration=10,title='Raw');"
+    "data1.plot(duration=10,title='Raw')"
    ]
   },
   {
