--- a/MNEPython/headmodel.ipynb
+++ b/MNEPython/headmodel.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "c9633a79",
    "metadata": {},
    "outputs": [
@@ -50,6 +50,18 @@
       "Z:\\Projects\\FLUX\\MEG_data\\Course\\openneuro\\sub-01\\ses-01\\meg\\sub-01_ses-01_task-SpAtt_run-01_meg.fif\n",
       "Z:\\Projects\\FLUX\\MEG_data\\Course\\openneuro\\sub-01\\ses-01\\anat\n",
       "Z:\\Projects\\FLUX\\MEG_data\\Course\\derivatives\\FreeSurfer\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ghafarit\\AppData\\Local\\Temp\\ipykernel_12944\\1790488200.py:14: FutureWarning: extension should start with a period \".\", but got: \"fif\". Prepending \".\" to form: \".fif\". This will raise an exception starting with MNE-BIDS 0.12.\n",
+      "  bids_path = BIDSPath(subject=subject, session=session,\n",
+      "C:\\Users\\ghafarit\\AppData\\Local\\Temp\\ipykernel_12944\\1790488200.py:26: FutureWarning: extension should start with a period \".\", but got: \"fif\". Prepending \".\" to form: \".fif\". This will raise an exception starting with MNE-BIDS 0.12.\n",
+      "  raw_path = bids_path.copy().update(root=r'Z:\\Projects\\FLUX\\MEG_data\\Course\\openneuro',\n",
+      "C:\\Users\\ghafarit\\AppData\\Local\\Temp\\ipykernel_12944\\1790488200.py:30: FutureWarning: extension should start with a period \".\", but got: \"nii.gz\". Prepending \".\" to form: \".nii.gz\". This will raise an exception starting with MNE-BIDS 0.12.\n",
+      "  mri_root = BIDSPath(subject=subject, session=session,\n"
      ]
     }
    ],
@@ -137,10 +149,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "a1701929",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using pyvistaqt 3d backend.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "Brain = mne.viz.get_brain_class()\n",
     "\n",
@@ -175,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "4f6c34e6",
    "metadata": {},
    "outputs": [
@@ -218,10 +239,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "e868584d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting existing file.\n"
+     ]
+    }
+   ],
    "source": [
     "mne.write_bem_solution(bem_file,\n",
     "                       bem, overwrite=True)"
@@ -237,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "20cbb6e3",
    "metadata": {
     "scrolled": true
@@ -293,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "b8f7d45f",
    "metadata": {},
    "outputs": [
@@ -318,10 +347,10 @@
     {
      "data": {
       "text/plain": [
-       "<mne.gui._coreg.CoregistrationUI at 0x1e1f3d05900>"
+       "<mne.gui._coreg.CoregistrationUI at 0x12dcafa7550>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "b8938f38",
    "metadata": {},
    "outputs": [
@@ -365,7 +394,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ghafarit\\AppData\\Local\\Temp\\ipykernel_15924\\1617969285.py:1: RuntimeWarning: The unit for channel(s) STI001, STI002, STI003, STI004, STI005, STI006, STI007, STI008, STI009, STI010, STI011, STI012, STI013, STI014, STI015, STI016, STI101, STI102 has changed from V to NA.\n",
+      "C:\\Users\\ghafarit\\AppData\\Local\\Temp\\ipykernel_12944\\1617969285.py:1: RuntimeWarning: The unit for channel(s) STI001, STI002, STI003, STI004, STI005, STI006, STI007, STI008, STI009, STI010, STI011, STI012, STI013, STI014, STI015, STI016, STI101, STI102 has changed from V to NA.\n",
       "  info = read_raw_bids(bids_path=raw_path, verbose=False).info\n"
      ]
     },
@@ -381,10 +410,10 @@
     {
      "data": {
       "text/plain": [
-       "<mne.viz.backends._pyvista.PyVistaFigure at 0x1e1f3d37a90>"
+       "<mne.viz.backends._pyvista.PyVistaFigure at 0x12dd6c73160>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "b93c3e32",
    "metadata": {},
    "outputs": [
@@ -473,22 +502,8 @@
      "text": [
       "    Found   805/11903 points outside using solid angles\n",
       "    Total 14951/28128 points inside the surface\n",
-      "Interior check completed in 75714.2 ms\n",
-      "    13177 source space points omitted because they are outside the inner skull surface.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:  1.3min remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:  1.3min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Interior check completed in 31282.7 ms\n",
+      "    13177 source space points omitted because they are outside the inner skull surface.\n",
       "    2886 source space points omitted because of the    5.0-mm distance limit.\n",
       "12065 sources remaining after excluding the sources outside the surface and less than    5.0 mm inside.\n",
       "Adjusting the neighborhood info.\n",
@@ -507,7 +522,21 @@
       "    -0.000000  1.000000  0.000000      18.00 mm\n",
       "    -0.000000  0.000000  1.000000     -44.19 mm\n",
       "     0.000000  0.000000  0.000000       1.00\n",
-      "Setting up volume interpolation ...\n",
+      "Setting up volume interpolation ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   31.2s remaining:    0.0s\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   31.2s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "    10226063/16777216 nonzero values for the whole brain\n",
       "[done]\n"
      ]
@@ -530,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "5b09d874",
    "metadata": {},
    "outputs": [
@@ -538,6 +567,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Overwriting existing file.\n",
       "    Write a source space...\n",
       "    [done]\n",
       "    1 source spaces written\n"
@@ -558,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "bb0a8287",
    "metadata": {
     "scrolled": false
@@ -596,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "c12f2f3c",
    "metadata": {},
    "outputs": [
@@ -646,7 +676,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=6)]: Using backend LokyBackend with 6 concurrent workers.\n",
-      "[Parallel(n_jobs=6)]: Done   3 out of   6 | elapsed:  1.2min remaining:  1.2min\n"
+      "[Parallel(n_jobs=6)]: Done   3 out of   6 | elapsed:   46.2s remaining:   46.2s\n"
      ]
     },
     {
@@ -655,20 +685,7 @@
      "text": [
       "    Found     0/ 8226 points outside using solid angles\n",
       "    Total 12065/12065 points inside the surface\n",
-      "Interior check completed in 72595.7 ms\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=6)]: Done   6 out of   6 | elapsed:  1.2min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Interior check completed in 46626.3 ms\n",
       "\n",
       "Checking surface interior status for 306 points...\n",
       "    Found   0/306 points inside  an interior sphere of radius   48.6 mm\n",
@@ -680,6 +697,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[Parallel(n_jobs=6)]: Done   6 out of   6 | elapsed:   46.5s finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
      ]
     },
@@ -689,7 +707,7 @@
      "text": [
       "    Found   0/  0 points outside using solid angles\n",
       "    Total 0/306 points inside the surface\n",
-      "Interior check completed in 339.4 ms\n",
+      "Interior check completed in 103.2 ms\n",
       "\n",
       "Composing the field computation matrix...\n"
      ]
@@ -698,17 +716,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.2s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.2s finished\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.0s remaining:    0.0s\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.0s finished\n",
       "[Parallel(n_jobs=6)]: Using backend LokyBackend with 6 concurrent workers.\n",
-      "[Parallel(n_jobs=6)]: Done   3 out of   6 | elapsed:   51.6s remaining:   51.6s\n",
-      "[Parallel(n_jobs=6)]: Done   6 out of   6 | elapsed:   52.7s finished\n",
+      "[Parallel(n_jobs=6)]: Done   3 out of   6 | elapsed:   29.4s remaining:   29.4s\n",
+      "[Parallel(n_jobs=6)]: Done   6 out of   6 | elapsed:   29.5s finished\n",
       "[Parallel(n_jobs=6)]: Using backend LokyBackend with 6 concurrent workers.\n",
-      "[Parallel(n_jobs=6)]: Done   3 out of   6 | elapsed:    1.7s remaining:    1.7s\n",
-      "[Parallel(n_jobs=6)]: Done   6 out of   6 | elapsed:    2.0s finished\n",
+      "[Parallel(n_jobs=6)]: Done   3 out of   6 | elapsed:    1.1s remaining:    1.1s\n",
+      "[Parallel(n_jobs=6)]: Done   6 out of   6 | elapsed:    1.1s finished\n",
       "[Parallel(n_jobs=6)]: Using backend LokyBackend with 6 concurrent workers.\n",
-      "[Parallel(n_jobs=6)]: Done   3 out of   6 | elapsed:    2.2s remaining:    2.2s\n",
-      "[Parallel(n_jobs=6)]: Done   6 out of   6 | elapsed:    2.4s finished\n"
+      "[Parallel(n_jobs=6)]: Done   3 out of   6 | elapsed:    1.4s remaining:    1.4s\n",
+      "[Parallel(n_jobs=6)]: Done   6 out of   6 | elapsed:    1.5s finished\n",
+      "[Parallel(n_jobs=6)]: Using backend LokyBackend with 6 concurrent workers.\n",
+      "[Parallel(n_jobs=6)]: Done   3 out of   6 | elapsed:    0.1s remaining:    0.1s\n"
      ]
     },
     {
@@ -722,15 +742,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=6)]: Using backend LokyBackend with 6 concurrent workers.\n",
-      "[Parallel(n_jobs=6)]: Done   3 out of   6 | elapsed:    0.0s remaining:    0.0s\n",
       "[Parallel(n_jobs=6)]: Done   6 out of   6 | elapsed:    0.1s finished\n",
       "[Parallel(n_jobs=6)]: Using backend LokyBackend with 6 concurrent workers.\n",
-      "[Parallel(n_jobs=6)]: Done   3 out of   6 | elapsed:    5.0s remaining:    5.0s\n",
-      "[Parallel(n_jobs=6)]: Done   6 out of   6 | elapsed:    5.7s finished\n",
+      "[Parallel(n_jobs=6)]: Done   3 out of   6 | elapsed:    4.5s remaining:    4.5s\n",
+      "[Parallel(n_jobs=6)]: Done   6 out of   6 | elapsed:    5.1s finished\n",
       "[Parallel(n_jobs=6)]: Using backend LokyBackend with 6 concurrent workers.\n",
-      "[Parallel(n_jobs=6)]: Done   3 out of   6 | elapsed:   15.3s remaining:   15.3s\n",
-      "[Parallel(n_jobs=6)]: Done   6 out of   6 | elapsed:   15.5s finished\n"
+      "[Parallel(n_jobs=6)]: Done   3 out of   6 | elapsed:    1.2s remaining:    1.2s\n",
+      "[Parallel(n_jobs=6)]: Done   6 out of   6 | elapsed:    1.3s finished\n"
      ]
     },
     {
@@ -771,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "830f288d",
    "metadata": {},
    "outputs": [
@@ -779,6 +797,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Overwriting existing file.\n",
       "    Write a source space...\n",
       "    [done]\n",
       "    1 source spaces written\n"
