--- a/MNEPython/Introduction.ipynb
+++ b/MNEPython/Introduction.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34,13 +35,16 @@
     "\n",
     "1) Install the Python environment; we recommend Anaconda3 which provide Jupyter notebooks and Spyder; see [anaconda.com](https://www.anaconda.com/)\n",
     "\n",
-    "2) Install MNE Python: [instructions](https://mne.tools/dev/install/index.html). To make 3D rendering possible we recommend\n",
+    "2) Install MNE Python ([instructions](https://mne.tools/dev/install/index.html)). To make 3D rendering possible, we recommend:\n",
     "\n",
-    ">  conda create --name=mne --channel=conda-forge mne\n",
-    "\n",
+    ">  conda create --name=mne --channel=conda-forge mne<br />\n",
     ">  conda install --name base nb_conda_kernels  \n",
     "\n",
-    "3) Download the example datasets (see [FLUX website](https://neuosc.com/flux/))\n",
+    "3) Install OpenNEURO and MNE-BIDS. These modules will be used to download and read the BIDS sample data.\n",
+    "\n",
+    ">  conda activate mne<br />\n",
+    ">  conda install -c conda-forge openneuro-py<br />\n",
+    ">  conda install --channel conda-forge --no-deps mne-bids<br />\n",
     "\n",
     "4) Get the Jupyther notebooks from Github (see [FLUX website](https://neuosc.com/flux/); alternatively copy/paste the code from Github an execute using e.g. Spyder.\n",
     "\n",
@@ -65,13 +69,6 @@
     "Alexandre Gramfort, Martin Luessi, Eric Larson, Denis A. Engemann, Daniel Strohmeier, Christian Brodbeck, Roman Goj, Mainak Jas, Teon Brooks, Lauri Parkkonen, and Matti S. Hämäläinen. MEG and EEG data analysis with MNE-Python. Frontiers in Neuroscience, 7(267):1–13, 2013. doi:10.3389/fnins.2013.00267.\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
