--- a/MNEPython/Conditions.ipynb
+++ b/MNEPython/Conditions.ipynb
@@ -27,7 +27,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import mne\n",
-    "from mne_bids import BIDSPath, read_raw_bids\n"
+    "from mne_bids import BIDSPath, read_raw_bids"
    ]
   },
   {
@@ -65,13 +65,13 @@
    "source": [
     "subject = '01'\n",
     "session = '01'\n",
-    "task = 'SpAtt'  # name of the task\n",
-    "run = '01'  # we have two runs for this subject, let's look at run = 1\n",
+    "task = 'SpAtt'\n",
+    "run = '01'\n",
     "meg_suffix = 'meg'\n",
     "ica_suffix = 'ica'\n",
     "epo_suffix = 'epo'\n",
     "\n",
-    "deriv_root = r'Z:\\Projects\\FLUX\\MEG_data\\Course\\derivatives'  # path of the derivatives, similar structure to bids raw data \n",
+    "deriv_root = r'Z:\\FLUX_BIDS\\derivatives\\Preprocessing'\n",
     "bids_path = BIDSPath(subject=subject, session=session,\n",
     "            task=task, run=run, suffix=ica_suffix, datatype='meg',\n",
     "            root=deriv_root, extension='fif', check=False)\n",
@@ -79,11 +79,11 @@
     "                      \n",
     "deriv_fname = bids_path.basename.replace(ica_suffix, epo_suffix)\n",
     "deriv_file_1 = op.join(bids_path.directory, deriv_fname)\n",
-    "deriv_file = deriv_file_1.replace('run-01', 'run-12')  # we can't use the update function because the deriv files have not yet been created\n",
+    "deriv_file = deriv_file_1.replace('run-01', 'run-12')  # run 12 -> run 01 concatenated with run 02\n",
     "print(deriv_file)\n",
     "\n",
     "# define the bids path to raw data and events file\n",
-    "raw_path = bids_path.copy().update(root=r'Z:\\Projects\\FLUX\\MEG_data\\Course\\openneuro', \n",
+    "raw_path = bids_path.copy().update(root=r'Z:\\FLUX_BIDS', \n",
     "                                   suffix=meg_suffix, extension='fif', check=False)\n",
     "print(raw_path.fpath)"
    ]
@@ -191,11 +191,12 @@
     "            verbose=True)\n",
     "               \n",
     "# Some variable preparation in case we are using bids events file instead of mne\n",
-    "raw_raw = read_raw_bids(bids_path=raw_path,  # reading the events from the original raw file\n",
+    "raw_raw = read_raw_bids(bids_path=raw_path,\n",
     "            extra_params={'preload':True},\n",
     "            verbose=True)\n",
-    "events, events_id = mne.events_from_annotations(raw_raw, event_id='auto')\n",
-    "\n"
+    "\n",
+    "# reading the events from the original raw file\n",
+    "events, events_id = mne.events_from_annotations(raw_raw, event_id='auto')"
    ]
   },
   {
@@ -213,9 +214,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
-    "plt.stem(events[:,0],events[:,2])\n",
-    "plt.xlim()\n",
+    "%matplotlib inline\n",
+    "plt.stem(events[:,0][:80],events[:,2][:80])\n",
     "plt.xlabel('samples')\n",
     "plt.ylabel('Trigger value (STI101)')\n",
     "plt.show()"
@@ -413,7 +413,7 @@
     "    \n",
     "\n",
     "# define event ids we are interested in\n",
-    "events_picks_id = {k:v for k, v in events_id.items() if k.startswith('cue')}  # select only epochs you are interested in\n"
+    "events_picks_id = {k:v for k, v in events_id.items() if k.startswith('cue')}  # select only epochs you are interested in"
    ]
   },
   {
@@ -430,7 +430,7 @@
    "outputs": [],
    "source": [
     "raw, events = mne.concatenate_raws(raw_list, events_list=events_list)\n",
-    "del raw_list \n"
+    "del raw_list "
    ]
   },
   {
@@ -706,13 +706,6 @@
     "%matplotlib inline\n",
     "epochs['cue_left'].filter(0.0,30).crop(-0.1,0.4).plot_image(picks=['MEG2343'],vmin=-150,vmax=150);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
