--- a/MNEPython/Afirstlook.ipynb
+++ b/MNEPython/Afirstlook.ipynb
@@ -71,7 +71,7 @@
       "   👉 Please report problems 🤯 and bugs 🪲 at\n",
       "      https://github.com/hoechenberger/openneuro-py/issues\n",
       "\n",
-      "🌍 Preparing to download ds004346 …\n",
+      "🌍 Preparing to download ds004346 …\n"
      ]
     },
     {
