--- a/MNEPython/ApplyingMaxFilter.ipynb
+++ b/MNEPython/ApplyingMaxFilter.ipynb
@@ -736,7 +736,7 @@
    ],
    "source": [
     "%matplotlib inline\n",
-    "data1.plot_psd(fmax=60, n_fft = 1000);"
+    "data1.plot_psd(fmax=60, n_fft = 1000)"
    ]
   },
   {
@@ -774,7 +774,7 @@
    ],
    "source": [
     "%matplotlib inline\n",
-    "data1_sss.plot_psd(fmax=60, n_fft = 1000);"
+    "data1_sss.plot_psd(fmax=60, n_fft = 1000)"
    ]
   },
   {
@@ -959,7 +959,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:15:42) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
