--- a/MNEPython/ArtefactAnnotation.ipynb
+++ b/MNEPython/ArtefactAnnotation.ipynb
@@ -209,8 +209,7 @@
     "onset -= data1._first_time  \n",
     "duration = np.repeat(0.5, n_blinks)  \n",
     "description = ['blink'] * n_blinks  \n",
-    "orig_time = data1.info['meas_date']\n",
-    "annotations_blink = mne.Annotations(onset, duration, description, orig_time)\n"
+    "annotations_blink = mne.Annotations(onset, duration, description)\n"
    ]
   },
   {
@@ -319,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From this figure we can see that the threshold is mostly above the baseline level. Still, it captures all the picks in high-gamma activity representing muscle artifacts. "
+    "From this figure we can see that the threshold is above the baseline level. Still, it captures all the picks in high-gamma activity representing muscle artifacts. "
    ]
   },
   {
