--- a/MNEPython/Afirstlook.ipynb
+++ b/MNEPython/Afirstlook.ipynb
@@ -115,8 +115,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Note:**\n",
-    "Before proceeding with the tutorial, make sure that the download is complete. This step can take many minutes, depending on your internet connection speed."
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "<b>Warning:<br />\n",
+    "    </b> Before proceeding with the tutorial, make sure that the download is complete. This step can take many minutes, depending on your internet connection speed."
    ]
   },
   {
