--- a/MNEPython/ApplyingMaxFilter.ipynb
+++ b/MNEPython/ApplyingMaxFilter.ipynb
@@ -799,13 +799,14 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
+   "metadata": {},
    "source": [
-    "> **Note:**\n",
-    "If you are using MNE-Python < 1.0, run the code below before saving the SSS data. This will fix an issue with the formatting of the subject information preventing the new data to be saved.  \n",
-    "> \n",
-    "> <code>\n",
-    "> data1_sss.info['subject_info']['weight'] = None  \n",
-    "data1_sss.info['subject_info']['height'] = None\n"
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "<b>Warning:<br />\n",
+    "    </b> If you are using MNE-Python < 1.0, run the code below before saving the SSS data. This will fix an issue with the formatting of the subject information preventing the new data to be saved. \n",
+    "    <br /> <br />\n",
+    "    <code>data1_sss.info['subject_info']['weight'] = None  \n",
+    "    data1_sss.info['subject_info']['height'] = None\n"
    ]
   },
   {
