--- a/MNEPython/ApplyingMaxFilter.ipynb
+++ b/MNEPython/ApplyingMaxFilter.ipynb
@@ -806,7 +806,7 @@
     "    </b> If you are using MNE-Python < 1.0, run the code below before saving the SSS data. This will fix an issue with the formatting of the subject information preventing the new data to be saved. \n",
     "    <br /> <br />\n",
     "    <code>data1_sss.info['subject_info']['weight'] = None  \n",
-    "    data1_sss.info['subject_info']['height'] = None\n"
+    "data1_sss.info['subject_info']['height'] = None"
    ]
   },
   {
