--- a/MNEPython/Afirstlook.ipynb
+++ b/MNEPython/Afirstlook.ipynb
@@ -244,16 +244,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data1.info['subject_info']['weight'] = None\n",
-    "data1.info['subject_info']['height'] = None"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -436,7 +426,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mne",
+   "display_name": "flux",
    "language": "python",
    "name": "python3"
   },
@@ -450,11 +440,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:15:42) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:16:53) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "12a257d0362ebf338d2a0eaea5babc896c799574f6a031ea58f2eeafdd46f274"
+    "hash": "d4bb03f97efaa4a6e6bd96b6dbb810e96a21614e05e834deaba9f8f83d126801"
    }
   }
  },
