edited the warning

--- a/MNEPython/ArtefactAnnotation.ipynb
+++ b/MNEPython/ArtefactAnnotation.ipynb
@@ -196,12 +196,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-danger\">\n",
     "<b>Warning:<br />\n",
-    "    </b> If you are using MNE-Python 1.0.0 or higher, you may get the following error message when running the code above: \n",
+    "    </b> If you are using MNE-Python < 1.0.0, you may get the following error message when running the code above: \n",
     "    <br /><br />\n",
     "    <code>ValueError: orig_time should be the same to add/concatenate 2 annotations (got None != 2000-01-01 00:00:00+00:00)</code>\n",
     "    <br /><br />\n",
@@ -210,9 +211,8 @@
     "    <code>n_blinks = len(eog_events)\n",
     "onset = eog_events[:, 0] / data1.info['sfreq'] - 0.25  \n",
     "duration = np.repeat(0.5, n_blinks)  \n",
-    "description = ['blink'] * n_blinks  \n",
-    "orig_time = data1.info['meas_date'  \n",
-    "annotations_blink = mne.Annotations(onset,duration,description,orig_time)</code>\n",
+    "description = ['blink'] * n_blinks   \n",
+    "annotations_blink = mne.Annotations(onset,duration,description)</code>\n",
     "</div>"
    ]
   },
@@ -866,7 +866,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mne",
+   "display_name": "flux",
    "language": "python",
    "name": "python3"
   },
@@ -880,11 +880,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:15:42) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:16:53) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "12a257d0362ebf338d2a0eaea5babc896c799574f6a031ea58f2eeafdd46f274"
+    "hash": "d4bb03f97efaa4a6e6bd96b6dbb810e96a21614e05e834deaba9f8f83d126801"
    }
   }
  },
