--- a/MNEPython/TFRofPower.ipynb
+++ b/MNEPython/TFRofPower.ipynb
@@ -379,10 +379,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note the slight posterior right lateralization of the alpha suppression. This is most likely explained by allocation of attention to the left."
+    "Note the slight posterior right lateralization of the alpha suppression. This is most likely explained by allocation of attention to the right."
    ]
   },
   {
