--- a/MNEPython/ArtefactAnnotation.ipynb
+++ b/MNEPython/ArtefactAnnotation.ipynb
@@ -840,10 +840,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Preregistration: report the the type of artifacts being annotated and well ass the threshold selections. \n",
+    "Preregistration: report the the type of artifacts being annotated as well as the threshold selections. \n",
     "\n",
     "\n",
     "Publication, example:\n",
