--- a/MNEPython/TheDataset.ipynb
+++ b/MNEPython/TheDataset.ipynb
@@ -64,11 +64,18 @@
     "* Jensen, O., and Hanslmayr, S., 2020. The Role of Alpha Oscillations for Attention and Working Memory. In. Poeppel, D., Mangun, G.R., and Gazzaniga, M.S. (eds) The cognitive neurosciences, 6th MIT Press.\n",
     "* Brainard, D.H., 1997. The Psychophysics Toolbox. Spat Vis 10, 433–436.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mne",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -82,12 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:15:42) [MSC v.1916 64 bit (AMD64)]"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "12a257d0362ebf338d2a0eaea5babc896c799574f6a031ea58f2eeafdd46f274"
-   }
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
