fixed deriv_root path

--- a/MNEPython/Classification.ipynb
+++ b/MNEPython/Classification.ipynb
@@ -79,7 +79,7 @@
     "meg_suffix = 'meg'\n",
     "epo_suffix = 'epo'\n",
     "\n",
-    "deriv_root = r'Z:\\Projects\\FLUX\\MEG_data\\Course\\derivatives'  # path of the derivatives, similar structure to bids raw data \n",
+    "deriv_root = r'Z:\\FLUX_BIDS\\derivatives\\Preprocessing'\n",
     "bids_path = BIDSPath(subject=subject, session=session,\n",
     "            task=task, run=run, suffix=epo_suffix, datatype='meg',\n",
     "            root=deriv_root, extension='fif', check=False)\n",
