--- a/MNEPython/headmodel.ipynb
+++ b/MNEPython/headmodel.ipynb
@@ -81,7 +81,7 @@
     "fwd_suffix = 'fwd'\n",
     "trans_suffix = 'trans'\n",
     "\n",
-    "deriv_root = r'Z:\\Projects\\FLUX\\MEG_data\\Course\\derivatives'  # path of the derivatives, similar structure to bids raw data \n",
+    "deriv_root = r'Z:\\FLUX_BIDS\\derivatives\\Preprocessing'\n",
     "bids_path = BIDSPath(subject=subject, session=session,\n",
     "            task=task, run=run, suffix=epo_suffix, datatype='meg',\n",
     "            root=deriv_root, extension='fif', check=False)\n",
@@ -833,7 +833,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('flux')",
+   "display_name": "mne",
    "language": "python",
    "name": "python3"
   },
@@ -847,11 +847,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:15:42) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "d4bb03f97efaa4a6e6bd96b6dbb810e96a21614e05e834deaba9f8f83d126801"
+    "hash": "12a257d0362ebf338d2a0eaea5babc896c799574f6a031ea58f2eeafdd46f274"
    }
   }
  },
