--- a/MNEPython/DICS.ipynb
+++ b/MNEPython/DICS.ipynb
@@ -92,12 +92,12 @@
     "bem_file = fwd_file.replace(fwd_suffix, bem_suffix)\n",
     "print(src_file)\n",
     "\n",
-    "raw_path = bids_path.copy().update(root=r'Z:\\FLUX_BIDS\\derivatives\\Preprocessing', \n",
+    "raw_path = bids_path.copy().update(root=r'Z:\\FLUX_BIDS\\derivatives', \n",
     "                                suffix=meg_suffix, extension='fif', run='01', check=False)\n",
     "print(raw_path.fpath)\n",
     "\n",
     "mri_root = BIDSPath(subject=subject, session=session,\n",
-    "                    root=r'Z:\\FLUX_BIDS\\derivatives\\Preprocessing',  \n",
+    "                    root=r'Z:\\FLUX_BIDS\\derivatives',  \n",
     "                    datatype='anat', suffix=mri_suffix, extension='nii.gz')\n",
     "print(mri_root.directory)\n",
     "\n",
