--- a/MNEPython/Afirstlook.ipynb
+++ b/MNEPython/Afirstlook.ipynb
@@ -18,6 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "HIIIII\n",
     "In this section we will set the paths and load the data. We will then explain the data structure and do a few sanity checks. Finally follow some examples for how to perform simples plots of the raw data. \n",
     "\n",
     "Import the required modules:"
@@ -111,7 +112,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -427,7 +427,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flux",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -441,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:16:53) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.7"
   },
   "vscode": {
    "interpreter": {
